<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="tip_calculator_title">Tip Calculator</string>
    <string name="check_amount">Check Amount:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="total_tip">Total Tip:</string>
    <string name="zero">$0.00</string>
    <string name="calculate_button_text">Calculate Tip</string>
</resources>
